--- a/.github/workflows/windows-vcpkg.yml
+++ b/.github/workflows/windows-vcpkg.yml
@@ -110,9 +110,13 @@ jobs:
       - name: Install pip dependencies if necessary
         run: pip install -r src/tests/examples/requirements.txt
 
-      - name: Init submodule
+      - name: Init submodule Antares_Simulator_Tests
         run: |
           git submodule update --init --remote src/tests/resources/Antares_Simulator_Tests
+
+      - name: Init submodule Antares_Simulator_Tests_NR
+        run: |
+          git submodule update --init --remote src/tests/resources/Antares_Simulator_Tests_NR
 
       - name: Enable git longpaths
         run: git config --system core.longpaths true
@@ -241,6 +245,11 @@ jobs:
           batch-name: short-tests
           os: ${{ env.os }}
 
+      - name: Run cucumber on short-tests
+        uses: ./.github/workflows/cucumber-tests
+        with:
+          feature: "features/short_tests.feature"
+
       - name: Run mps tests
         if: ${{ env.RUN_SIMPLE_TESTS == 'true' && !cancelled() }}
         uses: ./.github/workflows/run-tests
@@ -274,6 +283,11 @@ jobs:
           simtest-tag: ${{ env.SIMTEST }}
           batch-name: medium-tests
           os: ${{ env.os }}
+
+      - name: Run cucumber on medium-tests
+        uses: ./.github/workflows/cucumber-tests
+        with:
+          feature: "features/medium_tests.feature"
 
       - name: Run long-tests-1
         if: ${{ env.RUN_EXTENDED_TESTS == 'true' && !cancelled() }}
