modeler API (changes due to review) : mostly rename directory from "optim" to "modeler"

--- a/src/solver/CMakeLists.txt
+++ b/src/solver/CMakeLists.txt
@@ -19,7 +19,7 @@ add_subdirectory(simulation)
 add_subdirectory(ts-generator)
 add_subdirectory(utils)
 add_subdirectory(variable)
-add_subdirectory(optim)
+add_subdirectory(modeler)
 
 #
 # Resource file for Windows
