Better dependencies with cmake, antares matrix (#2369)

--- a/src/libs/antares/array/CMakeLists.txt
+++ b/src/libs/antares/array/CMakeLists.txt
@@ -15,7 +15,7 @@ target_link_libraries(array
         io #matrix.hxx
         jit #jit.hxx require logs
         Antares::memory
-        Antares::study
+        Antares::utils
 )
 
 target_include_directories(array
