Add contribution guidelines

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
     - 'Tests (user)': 'developer-guide/4-Tests-user.md'
     - 'Tests (developer)': 'developer-guide/4-Tests-dev.md'
     - 'Installer creation': 'developer-guide/5-Installer-creation.md'
+    - 'Contributing': 'developer-guide/6-Contributing.md'
     - 'Continuous Integration': 'developer-guide/continuous-integration.md'
     - 'OR-tools integration': 'developer-guide/ortools-integration.md'
     - 'Changelog': 'developer-guide/CHANGELOG.md'
