--- a/src/solver/CMakeLists.txt
+++ b/src/solver/CMakeLists.txt
@@ -20,6 +20,8 @@ add_subdirectory(ts-generator)
 add_subdirectory(utils)
 add_subdirectory(variable)
 add_subdirectory(expressions)
+add_subdirectory(model)
+
 #
 # Resource file for Windows
 #
