Add valueType header

--- a/src/solver/model/CMakeLists.txt
+++ b/src/solver/model/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SRC_model
 
     include/antares/solver/model/model.h
     include/antares/solver/model/parameter.h
+    include/antares/solver/model/valueType.h
 )
 
 source_group("model" FILES ${SRC_model})
