--- a/src/tests/src/solver/CMakeLists.txt
+++ b/src/tests/src/solver/CMakeLists.txt
@@ -3,4 +3,5 @@ add_subdirectory(optimisation)
 add_subdirectory(utils)
 add_subdirectory(infeasible-problem-analysis)
 add_subdirectory(lps)
+add_subdirectory(modeler)
 add_subdirectory(expressions)
