--- a/.github/workflows/oracle8.yml
+++ b/.github/workflows/oracle8.yml
@@ -124,11 +124,13 @@ jobs:
     - name: Installer TGZ push
       uses: actions/upload-artifact@v4
       with:
+        name: oracle-targz
         path: _build/*.tar.gz
 
     - name: Installer RPM push
       uses: actions/upload-artifact@v4
       with:
+        name: oracle-rpm
         path: _build/*.rpm
 
     - name: Publish assets
