--- a/src/solver/modeler/api/CMakeLists.txt
+++ b/src/solver/modeler/api/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SRC_API
         include/antares/solver/modeler/api/linearProblemBuilder.h
 
         linearProblemData.cpp
+		linearProblemBuilder.cpp
 )
 
 add_library(${PROJ} ${SRC_API})
