--- a/src/solver/expressions/CMakeLists.txt
+++ b/src/solver/expressions/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SRC_Expressions
         nodes/UnaryNode.cpp
 
         visitors/CloneVisitor.cpp
+        visitors/PortfieldSubstitutionVisitor.cpp
         visitors/CompareVisitor.cpp
         visitors/EvalVisitor.cpp
         visitors/EvaluationContext.cpp
@@ -39,6 +40,7 @@ set(SRC_Expressions
         include/antares/solver/expressions/nodes/VariableNode.h
 
         include/antares/solver/expressions/visitors/CloneVisitor.h
+        include/antares/solver/expressions/visitors/PortfieldSubstitutionVisitor.h
         include/antares/solver/expressions/visitors/CompareVisitor.h
         include/antares/solver/expressions/visitors/EvalVisitor.h
         include/antares/solver/expressions/visitors/EvaluationContext.h
