--- a/src/solver/simulation/CMakeLists.txt
+++ b/src/solver/simulation/CMakeLists.txt
@@ -27,7 +27,7 @@ set(SRC_SIMULATION
         include/antares/solver/simulation/solver.hxx
         include/antares/solver/simulation/solver.data.h
         solver.data.cpp
-		include/antares/solver/simulation/simulation-run.h
+        include/antares/solver/simulation/simulation-run.h
         simulation-run.cpp
         include/antares/solver/simulation/common-eco-adq.h
         common-eco-adq.cpp
@@ -45,8 +45,8 @@ set(SRC_SIMULATION
         adequacy_patch_runtime_data.cpp
         include/antares/solver/simulation/ITimeSeriesNumbersWriter.h
         TimeSeriesNumbersWriter.cpp
-		include/antares/solver/simulation/BindingConstraintsTimeSeriesNumbersWriter.h
-		include/antares/solver/simulation/ISimulationObserver.h
+        include/antares/solver/simulation/BindingConstraintsTimeSeriesNumbersWriter.h
+        include/antares/solver/simulation/ISimulationObserver.h
 )
 source_group("simulation" FILES ${SRC_SIMULATION})
 
@@ -54,6 +54,7 @@ source_group("simulation" FILES ${SRC_SIMULATION})
 # --- Library VARIABLES ---
 #
 add_library(antares-solver-simulation)
+add_library(Antares::antares-solver-simulation ALIAS antares-solver-simulation)
 target_sources(antares-solver-simulation
         PRIVATE
         ${SRC_SIMULATION})
