--- a/src/tests/src/solver/CMakeLists.txt
+++ b/src/tests/src/solver/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(infeasible-problem-analysis)
 add_subdirectory(lps)
 add_subdirectory(modeler)
 add_subdirectory(expressions)
+add_subdirectory(toybox)
