--- a/src/tests/src/solver/expressions/CMakeLists.txt
+++ b/src/tests/src/solver/expressions/CMakeLists.txt
@@ -11,15 +11,16 @@ target_sources(${EXECUTABLE_NAME}
         test_LinearVisitor.cpp
         test_CompareVisitor.cpp
         test_CloneVisitor.cpp
-	test_DeepWideTrees.cpp
-	test_Iterators.cpp
+        test_DeepWideTrees.cpp
+        test_Iterators.cpp
+        test_AstDOTStyleVisitor.cpp
 )
 
 target_link_libraries(${EXECUTABLE_NAME}
         PRIVATE
         Boost::unit_test_framework
         antares-solver-expressions
-	antares-solver-expressions-iterators
+        antares-solver-expressions-iterators
 )
 
 # Storing tests-ts-numbers under the folder Unit-tests in the IDE
